Fixed header alignments

--- a/css/style.css
+++ b/css/style.css
@@ -367,7 +367,7 @@ body {
   line-height: 1.6;
   position: relative;
 }
-.education-title {
+.education-titles {
   font-size: 2rem;
   font-weight: 600;
   margin-bottom: 1.2rem;
